feat(content): Add "Publications" page
Signed-off-by: ovidiu.pascal <ovidiu.pascal@orange.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -47,6 +47,11 @@ theme = 'hugo-coder'
   weight = 3
   url = "open-source/"
 
+[[menu.main]]
+  name = "Publications"
+  weight = 40
+  url = "publications/"
+
 # ================================================================================================ #
 # Social Links                                                                                     #
 # ================================================================================================ #
