style(css): increase social icon size on homepage
Signed-off-by: ovidiu.pascal <ovidiu.pascal@orange.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -27,6 +27,7 @@ theme = 'hugo-coder'
   info = 'Software Engineer'
   avatarURL = 'images/avatar.jpg'
   colorScheme = 'auto'
+  customCSS = ["css/custom.css"]
 
 # ================================================================================================ #
 # Navigation Menu                                                                                  #
