--- a/hugo.toml
+++ b/hugo.toml
@@ -26,6 +26,7 @@ theme = 'hugo-coder'
   description = 'Software Engineer in Operational Research'
   info = 'Software Engineer'
   avatarURL = 'images/avatar.jpg'
+  favicon = 'favicon.svg'
   colorScheme = 'auto'
   customCSS = ["css/custom.css"]
 
